2003-05-02  Dominique Devriese  <dominique.devriese@student.kuleuven.ac.be>

	* generalize the undo support from the moving mode, and add undo
		  support for many of the object specific actions.. 

2003-05-01  Dominique Devriese  <dominique.devriese@student.kuleuven.ac.be>

	* perfect the grid..

	* fix useless error output on startup

	* add scroll bars to the full screen mode

	* add zoom actions to the document popup

	* add a change text action to text labels

2003-04-28  Dominique Devriese  <dominique.devriese@student.kuleuven.ac.be>

	* add undo support for moving

	* add a full screen mode

2003-04-27  Dominique Devriese  <dominique.devriese@student.kuleuven.ac.be>

	* some PolarCoords improvements

	* show a popup menu when the user clicks on the document, and allow
		  him to change the coordinate system..

2003-04-26  Dominique Devriese  <dominique.devriese@student.kuleuven.ac.be>

	* added property icons

2003-04-22  Dominique Devriese  <dominique.devriese@student.kuleuven.ac.be>

	* fix the move dependencies..

2003-04-19  Dominique Devriese  <dominique.devriese@student.kuleuven.ac.be>

	* Add KSeg file format support

	* Start using the ChangeLog for versions after 0.4.1 ;)

ma feb 11 00:12:52 CET 2002 - Dominique Devriese <devriese@kde.org>
	
	* Initial Creation